--- a/jc.html
+++ b/jc.html
@@ -11,7 +11,7 @@
 	<div class="header">
 		<div class="wp">
 		<div class="hd-l">
-			<img  src="\Aktao\images\logo.png">
+			<img  src="images\logo.png">
 		</div>
 		<div class="hd-r">
 			<div class="hd-r-top">
