--- a/jc3.html
+++ b/jc3.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>信息公告中转</title>
-    <link rel="stylesheet" type="text/css" href="/Aktao/css/jc1.css">
+    <link rel="stylesheet" type="text/css" href="/Aktao/jc1.css">
     </head>
     
     <body>
