--- a/jc.html
+++ b/jc.html
@@ -322,7 +322,7 @@
 					    </ul>
 					</div>
 					<div style="overflow:hidden;position:relative;width:422px;">
-					        <iframe frameborder="0" scrolling="no" allowtransparency="" src="http://news.jxufe.edu.cn/news-list-shishengfengcaizhongzhuan.html" width="420" height="300"></iframe>
+					        <iframe frameborder="0" scrolling="no" allowtransparency="" src="https://kulu-20.github.io/Aktao/jc1.html" width="420" height="300"></iframe>
 					</div>
 				</div>
 			</div>
@@ -362,7 +362,7 @@
 				<div class="l-left">
 					<div class="throw">
 					    <span class="sspecial">克陶学研</span>
-					    <a class="morefour" href="http://news.jxufe.edu.cn/news-list-keyanjianshe.html" target="_blank">MORE+</a>
+					    <a class="morefour" href="https://kulu-20.github.io/Aktao/jc2.html" target="_blank">MORE+</a>
 					</div>
 					<div class="substance">
 					    <iframe frameborder="0" scrolling="no" allowtransparency="" src="http://news.jxufe.edu.cn/news-list-xnskjlct.html" width="583" height="367"></iframe>
@@ -371,7 +371,7 @@
 				<div class="l-right">
 					<div class="report">
 					    <span class="mass">克陶传媒</span>
-					    <a class="morefive" href="http://news.jxufe.edu.cn/news-list-meitijiangcai.html" target="_blank">MORE+</a>
+					    <a class="morefive" href="https://kulu-20.github.io/Aktao/jc3.html" target="_blank">MORE+</a>
 					</div>
 					<div class="indicative">
 					    <iframe frameborder="0" scrolling="no" allowtransparency="" src="http://news.jxufe.edu.cn/news-list-xfmrtujictz.html" width="583" height="367"></iframe>
