--- a/jc.html
+++ b/jc.html
@@ -365,7 +365,7 @@
 					    <a class="morefour" href="https://kulu-20.github.io/Aktao/jc2.html" target="_blank">MORE+</a>
 					</div>
 					<div class="substance">
-					    <iframe frameborder="0" scrolling="no" allowtransparency="" src="http://news.jxufe.edu.cn/news-list-xnskjlct.html" width="583" height="367"></iframe>
+					    <iframe frameborder="0" scrolling="no" allowtransparency="" src="https://kulu-20.github.io/Aktao/jc2.html" width="583" height="367"></iframe>
 					</div>
 				</div>
 				<div class="l-right">
@@ -374,7 +374,7 @@
 					    <a class="morefive" href="https://kulu-20.github.io/Aktao/jc3.html" target="_blank">MORE+</a>
 					</div>
 					<div class="indicative">
-					    <iframe frameborder="0" scrolling="no" allowtransparency="" src="http://news.jxufe.edu.cn/news-list-xfmrtujictz.html" width="583" height="367"></iframe>
+					    <iframe frameborder="0" scrolling="no" allowtransparency="" src="https://kulu-20.github.io/Aktao/jc3.html" width="583" height="367"></iframe>
 					</div>
 				</div>
 			</div>
